k8s/network-of-terms-autocompletion-demo/network-of-terms-autocompletion-demo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: network-of-terms-autocompletion-demo
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: network-of-terms-autocompletion-demo
